manifests/deployment_sormas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sormas
  namespace: ga-test-kata
spec: 
  replicas: 1
  revisionHistoryLimit: 10
  selector: 
    matchLabels:
      run: sormas
  template:
    metadata:
      labels:
        run: sormas
    spec:
      runtimeClassName: kata
      containers:
        - image: robbmue/sormas_kata:latest
          imagePullPolicy: Always
          name: sormas
          resources:
            limits:
              cpu: 2000m
              memory: 5000M
            requests:
              memory: 1500M
          ports: 
          - containerPort: 6080
            protocol: TCP
            name: payara
          - containerPort: 6048
            protocol: TCP
            name: payara-admin
          volumeMounts:
          - name: custom
            mountPath: /opt/sormas/custom
          - name: sormas-logs
            mountPath: /opt/domains/sormas/logs
          livenessProbe:
            httpGet:
              path: /sormas-ui/login
              port: 6080
            initialDelaySeconds: 300
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /sormas-ui/login
              port: 6080
            initialDelaySeconds: 300
            periodSeconds: 30
      volumes: 
      - name: custom
        persistentVolumeClaim:
          claimName: custom
      - name: sormas-logs
        emptyDir: {}
