manifests/statefulSet_postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: ga-test
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres-service
  replicas: 1
  template:
    metadata:
      # annotations: 
      #   io.kubernetes.cri.untrusted-workload: "true"
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: hzibraunschweig/sormas-postgres:2.8.0
          imagePullPolicy: IfNotPresent
          args: ["-c", "config_file=/etc/postgresql/postgresql.conf"]
          ports: 
          - containerPort: 5432
            name: postgres
          volumeMounts:
          - name: postgres
            mountPath: /var/lib/postgresql/data
            subPath: postgres
          resources:
            limits:
              memory: 2G
              cpu: '2'
            requests: 
              memory: 1G
              cpu: 100m
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 15
            periodSeconds: 20
  volumeClaimTemplates:
    - metadata:
        name: postgres
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
