manifests/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: default
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      # annotations: 
      #   io.kubernetes.cri.untrusted-workload: "true"
      labels:
        app: test
    spec:
      runtimeClassName: kata
      containers:
      - name: test
        image: alpine:3.7
        command:
        - sleep
        - '10000'
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
