manifests/service_postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ga-test-kata
spec: 
  selector:
    app: postgres
  ports: 
    - protocol: TCP
      port: 5432
      targetPort: 5432
