manifests/service_sormas.yaml
apiVersion: v1
kind: Service
metadata:
  name: sormas
  namespace: ga-test
spec: 
  selector:
    run: sormas
  ports: 
    - protocol: TCP
      port: 80
      targetPort: payara
