manifests/ingress_sormas.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sormas
  namespace: ga-test-kata
spec:
  rules:
  - host: ga-test-kata.k8smaster      
    http:
      paths:
      - path: /
        backend:
          serviceName: sormas 
          servicePort: 80
